# TriagemAdaptativaDeAtendimentos

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  run_analysis.ps1  run_analysis.sh  run_pipeline.sh
.specs/: 00-index.md  01-problem-definition.md  02-mdp-formulation.md  03-environment-specs.md  04-agent-specs.md  05-experimental-protocol.md  06-evaluation-metrics.md
docs/assignment/: avaliacao-requisitos-codigo.md  compile.sh  report.css  report.md  slides.md
experiments/analysis/agent_vs_baselines/: agent_vs_baselines_summary.csv
experiments/analysis/by_queue/: resolved_by_queue_summary.csv
experiments/analysis/learning_curves/: learning_curves_summary.csv
experiments/analysis/qualitative/: action_distribution.csv  artifact.json  episode_summary.csv  qualitative_report.html  selected_episode_steps.csv  selected_episodes.csv
experiments/analysis/summary/: summary_table.csv  (+1 more)
experiments/baselines/: baselines_results.csv  baselines_results.json
experiments/results/: eval_results.csv  eval_results.json
src/agents/: eval.py  train.py
src/analysis/: agent_vs_baselines.py  learning_curves.py  qualitative_analysis.py  queue_analysis.py  summary_table.py  surprise_seed.py
src/baselines/: fixed_priority.py  longest_queue.py  random.py  run.py
src/environment/: __init__.py  triagem_env.py
tests/: conftest.py  test_agent_vs_baselines.py  test_baselines.py  test_environment.py  test_info_counters.py  test_learning_curves.py  test_qualitative_analysis.py  test_queue_analysis.py  test_summary_table.py  test_surprise_seed.py
(+13 files in other folders)
