[project]
name = "triagem-adaptativa"
version = "0.1.0"
description = "Triagem adaptativa de atendimentos usando Reinforcement Learning — Grupo 4 / IA 2026.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.3.0",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "shimmy>=2.0.1",
    "stable-baselines3>=2.9.0",
]
